skeleton for 'crunch' command and local datastore

--- a/tools/jsl.node.conf
+++ b/tools/jsl.node.conf
@@ -123,6 +123,8 @@
 +define clearTimeout
 +define setInterval
 +define clearInterval
++define setImmediate
++define clearImmediate
 +define JSON
 +define console
 +define module
