--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
 	},
 	"dependencies": {
 		"assert-plus": "0.1.5",
+		"bunyan": "0.23.1",
 		"catstreams": "0.0.4",
 		"extsprintf": "1.0.3",
-		"krill": "0.1.0",
+		"krill": "0.2.0",
 		"lstream": "0.0.4",
 		"jsprim": "0.5.1",
 		"skinner": "0.0.2",
