--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"jsprim": "0.5.1",
 		"posix-getopt": "1.1.0",
 		"skinner": "0.3.1",
+		"sqlite3": "2.2.3",
 		"tab": "0.1.0",
 		"vasync": "1.5.0",
 		"verror": "1.4.0"
