--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"krill": "0.3.0",
 		"lstream": "0.0.4",
 		"jsprim": "0.5.1",
+		"mkdirp": "0.5.0",
 		"posix-getopt": "1.1.0",
 		"semver": "2.3.0",
 		"skinner": "git://github.com/joyent/node-skinner.git#dragnet",
