break up functionality into more subcommands

--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
 		"assert-plus": "0.1.5",
 		"bunyan": "0.23.1",
 		"catstreams": "0.0.4",
+		"dashdash": "1.6.0",
 		"extsprintf": "1.0.3",
 		"krill": "0.3.0",
 		"lstream": "0.0.4",
 		"jsprim": "0.5.1",
 		"mkdirp": "0.5.0",
-		"posix-getopt": "1.1.0",
 		"semver": "2.3.0",
 		"skinner": "git://github.com/joyent/node-skinner.git#dragnet",
 		"sqlite3": "2.2.3",
