--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
 		"catstreams": "0.0.4",
 		"dashdash": "1.6.0",
 		"extsprintf": "1.0.3",
+		"fstream": "0.1.28",
 		"krill": "0.3.0",
 		"lstream": "0.0.4",
 		"jsprim": "0.5.1",
+		"manta": "1.2.8",
 		"mkdirp": "0.5.0",
 		"semver": "2.3.0",
 		"skinner": "git://github.com/joyent/node-skinner.git#dragnet",
 		"sqlite3": "2.2.3",
 		"tab": "0.1.0",
+		"tar": "0.1.20",
 		"vasync": "1.5.0",
 		"verror": "1.4.0"
 	}
