--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"tab": "0.1.0",
 		"tar": "0.1.20",
 		"vasync": "1.5.0",
-		"verror": "1.4.0"
+		"verror": "1.4.0",
+		"vstream": "0.1.0"
 	}
 }
